fixes font-size of graph to prevent clipping out of labels

--- a/css/main.less
+++ b/css/main.less
@@ -126,7 +126,8 @@ body {
 }
 
 #about-graph-container {
-	.axis{ 
+	.axis{
+		font-size: @fontSize-sm;
 		path,line {
 		fill: none;
 		stroke: @black;
@@ -134,11 +135,7 @@ body {
 		text {
 		text-transform: capitalize;
 		font-family: 'Roboto';
-		font-size: @fontSize-sm;
 		}
-	}
-	text {
-		font-size: @fontSize-xs;
 	}
 }
 
